# hse_numerical_methods_2024

./: CMakeLists.txt  README.md
lab01_exp/: CMakeLists.txt  TestExp.hpp  consts.hpp  exp.cpp  exp.hpp  testexp.cpp
lab02_pade_exp/: CMakeLists.txt  consts.hpp  padeexp.cpp  padeexp.hpp  testpade.cpp
lab03_Chebyshev/: CMakeLists.txt  Chebyshev.cpp  Chebyshev.hpp  Chebyshev_using_built_in_funcs.cpp  consts.hpp  testChebyshev.cpp
lab04_fourier/: CMakeLists.txt  fourier.cpp  fourier.hpp  testfourier.cpp
lab05_differentiation/: CMakeLists.txt  differentiation.cpp  differentiation.hpp  testderivative.cpp
lab06_parisgun/: CMakeLists.txt  atm.cpp  atm.hpp  consts.hpp  pg.cpp  pg.hpp  rkf45.cpp  rkf45.hpp
lab07_Everhart/: CMakeLists.txt  Everhart.cpp  Everhart.hpp  consts.hpp
lab08_satellite/: CMakeLists.txt  consts.hpp  plots.py  satellite.cpp  satellite.hpp
lab09_BSM/: bsm.cpp  bsm.hpp
